--- a/assets/locales/site.json
+++ b/assets/locales/site.json
@@ -3,7 +3,7 @@
   "description": "卡哇金魚的音效按鈕網站",
   "keywords": "VTuber VoiceButton Getsuka 玥華",
   "url": "https://sound.getsuka.net",
-  "social_image": "https://i.imgur.com/vOAsBZ3.png",
+  "social_image": "https://sound.getsuka.net/img/22.png",
   "twitter_user": "@FelixChen_TW",
   "theme_color": "#f2d9b4",
   "footer": {
